tests/ui/crablangdoc/feature-gate-doc_primitive.stderr
error[E0658]: `crablangc_doc_primitive` is a crablangc internal attribute
  --> $DIR/feature-gate-doc_primitive.rs:1:1
   |
LL | #[crablangc_doc_primitive = "usize"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(crablangc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
