tests/ui/crablangdoc/feature-gate-doc_primitive.rs
#[crablangc_doc_primitive = "usize"]
//~^ ERROR `crablangc_doc_primitive` is a crablangc internal attribute
/// Some docs
mod usize {}

fn main() {}
